# saas-world

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/agents/: scenario-author.md
.github/workflows/: ci.yml
config/: settings.toml
data/: README.md  actions.json
data/personas/: npc.ae_1.json  npc.be_b2.json  npc.be_b3.json  npc.cs_1.json  npc.cs_mgr_1.json  npc.cto.json  npc.designer.json  npc.fe_a1.json  npc.fs_b1.json  npc.head_sales.json  npc.pm_b.json
data/scenarios/billing-v2-regression/: README.md  eval.json  personas.overlay.json  scenario.json  seed.json  timeline.json
data/scenarios/checkout-not-ready/: README.md  eval.json  personas.overlay.json  scenario.json  seed.json  timeline.json
data/scenarios/feature-x-behind/: README.md  eval.json  personas.overlay.json  scenario.json  seed.json  timeline.json
data/templates/: deal-escalation.json  delivery-slip.json  hidden-critical-blocker.json  hidden-critical-blocker.md  release-triage.json
data/world/: company.json  org.json
docs/: design-principles.md  problem-def.md
docs/cases/: README.md  delivery-slip.md
docs/implementation/: 01-systems.md  02-wave1-core-spec.md  03-wave2-scenario-npc-spec.md  04-wave3-evaluator-spec.md  05-wave4-npc-parser-eval-extractor-spec.md  06-wave5-seeding-engine-spec.md  07-wave6-trajectory-store-spec.md  08-wave7-operator-cli-observability-spec.md  09-archetype-release-triage-spec.md  architecture.excalidraw
docs/presentations/: README.md  build.py  saas-world.html  saas-world.md
docs/research/: 01-landscape.md  02-architecture-proposal.md  03-eval-example.md  04-seeding-engine.md  05-action-space.md  06-trajectory-store.md  07-observability-tooling.md  README.md
docs/saas-world/: README.md  agent-sdk.md  cli.md  library-api.md  npc-replies.md  scenarios.md  tests.md
scripts/: deal_escalation_rollouts.py  pm_agent_llm.py  random_rollouts.py  replay_determinism.py
src/saasworld/: __init__.py  bootstrap.py  clock.py  content_hash.py  events.py  kernel.py  protocols.py  serve.py
src/saasworld/actions/: __init__.py  catalog.py  effects.py
src/saasworld/api/: __init__.py  app.py  rpc.py
src/saasworld/cli/: __init__.py  backend.py  build.py  main.py  render.py  runtime.py  traj.py
src/saasworld/engine/: __init__.py  __main__.py  assemble.py  bind.py  freeze.py  gate.py  project.py  render.py  (+4 more)
tests/: conftest.py  test_smoke.py
tests/api/: test_toolapi.py  test_toolapi_scenario.py
tests/cassettes/: seeding.jsonl
tests/cli/: conftest.py  test_backend.py  test_build.py  test_envelope.py  test_resilience.py  test_runtime.py  test_traj.py  test_traj_pov.py
tests/content/: test_content_hash.py
tests/evaluator/: conftest.py  test_paths.py  test_predicates.py  test_projection.py  test_rubric.py  test_score.py
tests/extractor/: test_extractor.py
tests/golden/: cli_session.json  core_loop.json  scenario_discover.json  score_breakdown.json  score_trajectory.json  test_cli_golden.py  test_golden.py  test_golden_scenario.py  test_golden_score.py  test_golden_trajectory.py  test_seeding_golden.py  trajectory_episode.json
tests/integration/: test_build_set.py  test_cli_build_arc.py  test_cli_episode.py  test_delivery_slip.py  test_discover_loop.py  test_release_triage.py  test_roundtrip.py  test_score_runs.py  test_trajectory_roundtrip.py
tests/kernel/: test_kernel.py
tests/llm/: test_cache.py  test_client.py
tests/npc/: test_decision.py  test_wakeups.py
tests/npc_parser/: conftest.py  test_parser.py
tests/observability/: conftest.py  test_index.py  test_project.py  test_store_replay.py
tests/openenv/: test_canonical_trajectory.py  test_env.py  test_inspector_distribution.py  test_inspector_grader.py  test_inspector_timeline.py
tests/property/: test_determinism.py  test_seeding_sample.py
tests/scenario/: test_gated_completion.py  test_loader.py
tests/scripts/: test_deal_escalation_rollouts.py
tests/seeding/: conftest.py  test_assemble.py  test_bind.py  test_deal_escalation.py  test_project.py
tests/state/: test_state.py
tests/validation/: test_catalog.py  test_eval_rubric.py  test_personas.py  test_templates.py
(+42 files in other folders)
