[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saasworld"
version = "0.1.0"
description = "PM-first-week simulation environment — Wave 1 core (Kernel + World State + Tool API)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "hypothesis>=6",
  "httpx>=0.27",        # FastAPI TestClient
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
saasworld-serve = "saasworld.serve:main"

[tool.hatch.build.targets.wheel]
packages = ["src/saasworld"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
  "kernel: Simulation Kernel unit tests",
  "state: World State Store unit tests",
  "toolapi: Tool API unit tests",
  "integration: cross-system integration tests",
  "golden: determinism / replay golden tests",
  "property: hypothesis property-based tests",
  "validation: data/actions.json catalog validation",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["saasworld"]
strict = true
