[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saasworld"
version = "0.1.0"
description = "PM-first-week simulation environment — discrete-event sim, deterministic evaluator, operator CLI"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "duckdb>=1.0",        # trajectory query index (rebuildable from the JSONL log)
  "anthropic>=0.40",    # LLM parser/extractor client (imported only in record mode)
  "typer>=0.12",        # operator CLI (thin Click wrapper; --help / typed args)
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "hypothesis>=6",
  "httpx>=0.27",        # FastAPI TestClient
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
saasworld-serve = "saasworld.serve:main"
saasworld-env-serve = "saasworld.openenv.serve:main"
saasworld = "saasworld.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/saasworld"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
  "kernel: Simulation Kernel unit tests",
  "state: World State Store unit tests",
  "toolapi: Tool API unit tests",
  "integration: cross-system integration tests",
  "golden: determinism / replay golden tests",
  "property: hypothesis property-based tests",
  "validation: data/actions.json catalog validation",
  "content: content-addressed hashing of scenario data",
  "scenario: Scenario Loader / frozen-instance tests",
  "npc: NPC engine (rule-based decision core + reply rendering)",
  "observability: Trajectory Store (persist / replay / POV / query)",
  "evaluator: deterministic-predicate Evaluator (scoring the trajectory)",
  "npc_parser: LLM NPC parser (intent classification + voice rendering)",
  "extractor: LLM eval extractor (prose -> structured claims)",
  "llm: LLM client determinism layer (cache / record / replay)",
  "seeding: Seeding Engine (sample / bind / assemble / project-eval / gate / freeze)",
  "cli: Operator CLI (arg parsing / dispatch / --json envelope / exit codes)",
  "openenv: OpenEnv-shaped SDK (env reset/step/state, HTTP client/server, terminal reward)",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
# Ad-hoc local inspection/rollout scripts are exempt from the lint gate (replay_determinism.py,
# which the `replay-check` target uses, stays linted). The presentation deck generator embeds
# long CSS/HTML strings, so it's exempt too.
extend-exclude = [
  "scripts/inspect_runs.py",
  "scripts/inspect_agent_runs.py",
  "scripts/inspect_rollouts.py",
  "scripts/pm_agent_llm.py",
  "scripts/random_rollouts.py",
  "docs/presentations/build.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["saasworld"]
strict = true
